syntax = "proto3";
package protocol;

option optimize_for = SPEED;
option go_package = "specter/spec/protocol";

import "spec/protocol/node.proto";

message Tunnel {
    Node client = 1;
    Node server = 2;

    string hostname = 10;
}

message GetNodesRequest {
    uint64 num = 1;
}

message GetNodesResponse {
    repeated Node nodes = 1;
}

message PublishTunnelRequest {
    Node client = 1;
    repeated Node servers = 2;

    string hostname = 10;
}

message PublishTunnelResponse {}